# async-couch

./: .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.tests.txt  setup.py
.github/workflows/: publish.yml  pythonapp.yml  pythonpackage.yml  testing.yml
async_couch/: __init__.py  exc.py  types.py
async_couch/clients/database/: endpoints.py  models.py  responses.py
async_couch/clients/designs/: endpoints.py  responses.py
async_couch/clients/documents/: endpoints.py  responses.py
async_couch/http_clients/: __init__.py  base_client.py  httpx_client.py
async_couch/utils/: content_types.py
docs/source/: conf.py  couch_client.rst  databases.rst  documents.rst  endpoints.rst  http_client_aiohttp.rst  http_client_base.rst  http_client_httpx.rst  http_clients.rst  index.rst  lib.rst  responses.rst
src/async_couch/: __init__.py  exc.py  types.py
src/async_couch/clients/database/: endpoints.py  models.py
src/async_couch/clients/designs/: endpoints.py
src/async_couch/clients/documents/: endpoints.py  responses.py
src/async_couch/http_clients/: __init__.py  base_client.py  httpx_client.py
src/async_couch/utils/: content_types.py
tests/: README.md  conftest.py  docker-compose.yml  test_content_types.py
tests/test_api/: test_databases.py  test_designs.py  test_document_attachments.py  test_documents.py
